video-gallery need to implement infinite scrool

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <section>
+  <section class="gallery">
     <form class="gallery-form">
       <input class="gallery-input" type="text" name="user-input">
     </form>
